# ai-component-hub

./: .gitignore  TODO.md  architecture.drawio  docker-compose.yml  jenkinsfile  pyproject.toml
agents/: Dockerfile
agents/app/: app.py  config.py  health.py
components/esb/: Dockerfile  requirements.txt
gateway/: Dockerfile  gunicorn.conf.py  load_routes_from_yaml.py  requirements.txt  routes.yaml
nginx/: Dockerfile  nginx.conf
orchestrator/: Dockerfile  agents.yaml  requirements.txt
tests/: test_call.py
wheelhouse/: PyYAML-6.0.2-cp311-cp311-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  charset_normalizer-3.4.4-cp311-cp311-manylinux2014_aarch64.manylinux_2_17_aarch64.manylinux_2_28_aarch64.whl  fastapi-0.115.2-py3-none-any.whl  httptools-0.7.1-cp311-cp311-manylinux2014_aarch64.manylinux_2_17_aarch64.manylinux_2_28_aarch64.whl  limits-5.6.0-py3-none-any.whl  prometheus_client-0.23.1-py3-none-any.whl  prometheus_fastapi_instrumentator-6.1.0-py3-none-any.whl  pydantic_core-2.41.5-cp311-cp311-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  pyyaml-6.0.3-cp311-cp311-manylinux2014_aarch64.manylinux_2_17_aarch64.manylinux_2_28_aarch64.whl  slowapi-0.1.9-py3-none-any.whl  starlette-0.40.0-py3-none-any.whl  uvloop-0.22.1-cp311-cp311-manylinux2014_aarch64.manylinux_2_17_aarch64.manylinux_2_28_aarch64.whl  watchfiles-1.1.1-cp311-cp311-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  websockets-15.0.1-cp311-cp311-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  wrapt-2.0.1-cp311-cp311-manylinux2014_aarch64.manylinux_2_17_aarch64.manylinux_2_28_aarch64.whl
(+43 files in other folders)
